--- a/index.html
+++ b/index.html
@@ -46,35 +46,36 @@
                 <img src="img/img3.png" class="starbucks" id="images">
             </div>
         </div>
-        <ul class="thumb">
-            <li><img src="img/thumb1.png"
-                    onclick="imgSlider('img/img1.png',('Happy Strawberry Mocha: Strawberry Frappucino with whipped cream and strawberry frosting'));changeCircleColor('#eb7495')">
-            </li>
-            <li><img src="img/thumb2.png"
-                    onclick="imgSlider('img/img2.png',('Unicorn Frappuccino: A drink with pink powder mixed with frappuccino creme, mango syrup and a kind of blue drizzle with a sour taste; with a touch of vanilla flavored whipped cream and a sweet and sour pink topping.'));changeCircleColor('#d752b1')">
-            </li>
-            <li><img src="img/thumb3.png"
-                    onclick="imgSlider('img/img3.png',('Matcha Tea: Milk-based Frappuccino, blended with Matcha Tea, a touch of sweetness and crushed with ice.'));changeCircleColor('#017143')">
-            </li>
+        <div>
+            <ul class="thumb">
+                <li><img src="img/thumb1.png"
+                        onclick="imgSlider('img/img1.png',('Happy Strawberry Mocha: Strawberry Frappucino with whipped cream and strawberry frosting'));changeCircleColor('#eb7495')">
+                </li>
+                <li><img src="img/thumb2.png"
+                        onclick="imgSlider('img/img2.png',('Unicorn Frappuccino: A drink with pink powder mixed with frappuccino creme, mango syrup and a kind of blue drizzle with a sour taste; with a touch of vanilla flavored whipped cream and a sweet and sour pink topping.'));changeCircleColor('#d752b1')">
+                </li>
+                <li><img src="img/thumb3.png"
+                        onclick="imgSlider('img/img3.png',('Matcha Tea: Milk-based Frappuccino, blended with Matcha Tea, a touch of sweetness and crushed with ice.'));changeCircleColor('#017143')">
+                </li>
 
-            <li class="img-4"><img src="img/thumb4.png"
-                    onclick="imgSlider('img/img4.png',('Double Chocolate Chip Frappuccino: Double chocolate chip frappuccino'));changeCircleColor('#45322e')">
-            </li>
+                <li class="img-4"><img src="img/thumb4.png"
+                        onclick="imgSlider('img/img4.png',('Double Chocolate Chip Frappuccino: Double chocolate chip frappuccino'));changeCircleColor('#45322e')">
+                </li>
 
-            <li class="img-5"><img src="img/img5.png"
-                    onclick="imgSlider('img/img5.png',('Double Chocolate Chip Frappuccino: Double chocolate chip frappuccino'));changeCircleColor('#d69a3a')">
-            </li>
+                <li class="img-5"><img src="img/img5.png"
+                        onclick="imgSlider('img/img5.png',('Double Chocolate Chip Frappuccino: Double chocolate chip frappuccino'));changeCircleColor('#d69a3a')">
+                </li>
+            </ul>
 
-
-
-
-        </ul>
+        </div>
         <ul class="sci">
             <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
             <li><a href="#"><img src="img/twitter.png" alt=""></a></li>
             <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
         </ul>
     </section>
+
+   
 
 
 
